[gd_scene load_steps=8 format=2]

[ext_resource path="res://imported_assets/computer/Battlenet.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ActionLevels/Room/ComputerBootLogo.tscn" type="PackedScene" id=2]
[ext_resource path="res://ActionLevels/Room/SpinningCursor.tscn" type="PackedScene" id=3]
[ext_resource path="res://ActionLevels/Room/Bootscreen.gd" type="Script" id=4]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
width = 1920
height = 1080

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[node name="Bootscreen" type="Sprite"]
texture = SubResource( 2 )
script = ExtResource( 4 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -960.0
margin_top = -540.0
margin_right = -960.0
margin_bottom = -540.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 58.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#FF00FF]***[/color] [color=#00FFFF]Magia OS[/color] v1.7.2011 [x86] [color=#0000FF]Tinux 5.6[/color] [color=#FF00FF]***[/color]
Loading OS..."
meta_underlined = false
text = "*** Magia OS v1.7.2011 [x86] Tinux 5.6 ***
Loading OS..."
fit_content_height = true
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 62.0
margin_right = 1920.0
margin_bottom = 91.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Mahou system initializing..."
text = "Mahou system initializing..."
fit_content_height = true
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 95.0
margin_right = 1920.0
margin_bottom = 124.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Setting hostname: neptune.kernel.org"
text = "Setting hostname: neptune.kernel.org"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel4" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 128.0
margin_right = 1920.0
margin_bottom = 157.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "Initializing soul gem"
text = "Initializing soul gem"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel5" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 161.0
margin_right = 1920.0
margin_bottom = 190.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "sm.V => Venus system loaded"
text = "sm.V => Venus system loaded"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel6" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 194.0
margin_right = 1920.0
margin_bottom = 223.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Started STAR Display Manager..."
text = "[  OK  ] Started STAR Display Manager..."
fit_content_height = true
scroll_active = false

[node name="RichTextLabel7" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 227.0
margin_right = 1920.0
margin_bottom = 256.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Drawing Magic Circle..."
text = "[  OK  ] Drawing Magic Circle..."
fit_content_height = true
scroll_active = false

[node name="RichTextLabel8" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 260.0
margin_right = 1920.0
margin_bottom = 289.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] USB found, all ports flipped upside down"
text = "[  OK  ] USB found, all ports flipped upside down"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel9" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 293.0
margin_right = 1920.0
margin_bottom = 322.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#FFFF00]>>[/color] Scanning for witches"
text = ">> Scanning for witches"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel10" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 326.0
margin_right = 1920.0
margin_bottom = 355.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#FFFF00]>>[/color] Scanning for phantoms"
text = ">> Scanning for phantoms"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel11" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 359.0
margin_right = 1920.0
margin_bottom = 388.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#FFFF00]>>[/color] Scanning for daemons"
text = ">> Scanning for daemons"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel15" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 392.0
margin_right = 1920.0
margin_bottom = 421.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[color=#FFFF00]>>[/color] Making a sandwich"
text = ">> Making a sandwich"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel12" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 425.0
margin_right = 1920.0
margin_bottom = 454.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Loaded 66 devils"
text = "[  OK  ] Loaded 66 devils"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel14" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 458.0
margin_right = 1920.0
margin_bottom = 487.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Found a stray dog!"
text = "[  OK  ] Found a stray dog!"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel16" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 491.0
margin_right = 1920.0
margin_bottom = 520.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Removed 24059 trojans"
text = "[  OK  ] Removed 24059 trojans"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel17" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 524.0
margin_right = 1920.0
margin_bottom = 553.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#ff3333]ERROR[/color]  ] Considered crashing"
text = "[  ERROR  ] Considered crashing"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel18" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 557.0
margin_right = 1920.0
margin_bottom = 586.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[  [color=#00FF00]OK[/color]  ] Decided against crashing"
text = "[  OK  ] Decided against crashing"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel13" type="RichTextLabel" parent="Control/VBoxContainer"]
margin_top = 590.0
margin_right = 1920.0
margin_bottom = 619.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "INIT system [color=#00FF00]OK![/color]"
text = "INIT system OK!"
fit_content_height = true
scroll_active = false

[node name="SpinningCursor" parent="Control/VBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 623.0
margin_right = 1920.0
margin_bottom = 652.0

[node name="ComputerBootLogo" parent="." instance=ExtResource( 2 )]
unique_name_in_owner = true
position = Vector2( 728, -346 )
scale = Vector2( 5, 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="LogoAppearTween" type="Tween" parent="."]
unique_name_in_owner = true

[node name="TextAppearTimer" type="Timer" parent="."]
unique_name_in_owner = true
